--- a/cv_pl.tex
+++ b/cv_pl.tex
@@ -1,7 +1,7 @@
 \documentclass[11pt,a4paper,sans]{moderncv}
 
 %% ModernCV themes
-\moderncvstyle{casual}
+\moderncvstyle{classic}
 \moderncvcolor{blue}
 \renewcommand{\familydefault}{\sfdefault}
 \nopagenumbers{}
@@ -16,11 +16,12 @@
 \firstname{Jakub}
 \familyname{Sokołowski}
 \title{Specjalista IT}
-\address{Adres}{Warszawa, Klaudyny 32 m 1}
+\address{Warszawa}{Klaudyny 32 m 1}
 \mobile{600~858~250}
 \phone{+48~(22)~833~77~50}
 \email{panswiata@gmail.com}
 \homepage{github.com/PonderingGrower}
+\extrainfo{Urodzony 01.02.1988}
 %\extrainfo{additional inform}
 \photo[64pt][0.4pt]{me}
 %\quote{Some quote (optional)}
@@ -32,23 +33,23 @@
 \makecvtitle
 
 \section{Edukacja}
-    \cventry{2007--2013}{Inżynier}{Polsko-Japońska Wyższa Szkoła Technik Komputerowych}{Warszawa}{\textit{Informatyka}}{Description}
+    \cventry{2007--2013}{Inżynier}{Polsko-Japońska Wyższa Szkoła Technik Komputerowych}{Warszawa}{\textit{Informatyka}}{Studia inżynierskie ukończone w katerze Sieci Komputerowych na specjalizacji Programowanie Systemowe i Sieciowe.}
 
-    \cventry{2005--2007}{Wykształcenie średnie}{Liceum Ogólnokształcące im. Joachima Lelewela}{Warszawa}{}{Description}
-
-\section{Języki obce}
-    \cvitemwithcomment{Angielski}{Płynna znajomość}{Łatwość w bezpośredniej komunikacji w języku angielskim.}
+    \cventry{2005--2007}{Wykształcenie średnie}{Liceum Ogólnokształcące im. Joachima Lelewela}{Warszawa}{}{}
 
 \section{Praca Inżynierska}
     \cvitem{Tytuł}{Udostępnianie znakowych urządzeń fizycznych za pośrednictwem sieci w systemach GNU/Linux}
     \cvitem{Specjaliacja}{Programowanie Systemowe i Sieciowe}
     \cvitem{Opis}{Zestaw oprogramowania składający się z serwera oraz modułu jądra Linux udostepniający w sposób przezroczysty dla użytkowników urządzenia znakowe na zdalnych urządzeniach.}
 
+\section{Języki obce}
+    \cvitemwithcomment{Angielski}{Płynnie}{Łatwość w bezpośredniej komunikacji w języku angielskim. Dobra znajomość słownictwa technicznego.}
+
 \section{Umiejętności}
     \cvitem{Języki}{C, C++, Java, bash, Powershell, SQL, Lua, \LaTeX, HTML, CSS}
     \cvitem{Systemy}{GNU/Linux(odmiany Debian oraz Gentoo), Windows, Windows Server 2003 i 2008}
-    \cvitem{Sprzęt}{Serwery oraz stacje robocze DELL, Przełączniki oraz routery CISCO i DELL, Zasilacze awaryjne APC}
-    \cvitem{Platformy}{Active Directory, Group Policy, MSSQL, Mysql, Postgresql, IIS, apache, nginx, lighttpd, Cacti, Graylog2}
+    \cvitem{Sprzęt}{Komputery i peryferia, Serwery oraz stacje robocze DELL, Przełączniki oraz routery CISCO i DELL, Zasilacze awaryjne APC}
+    \cvitem{Platformy}{Active Directory, Group Policy, MSSQL, Mysql, Postgresql, IIS, apache, nginx, lighttpd, Samba, NFS, Cacti, Graylog2}
     \cvitem{Narzędzia}{Microsoft SQL Studio, Microsoft Office, Git, GNU Make, VIM, Gimp, Photoshop}
     \cvitem{Specjalistyczne}{Oprogramowanie ERP Exact Globe, Systemy księkoweania Sage, System księgowo-płacowy Płatnik, Większość europejskich platform bankowości elektronicznej}
 
