--- a/cv_pl.tex
+++ b/cv_pl.tex
@@ -22,42 +22,37 @@
 \email{panswiata@gmail.com}
 \homepage{github.com/PonderingGrower}
 \extrainfo{Urodzony 01.02.1988}
-%\extrainfo{additional inform}
 \photo[64pt][0.4pt]{me}
-%\quote{Some quote (optional)}
 
-%%------------------------------------------------------------------------------
-%% Content
-%%------------------------------------------------------------------------------
 \begin{document}
 \makecvtitle
 
 \section{Edukacja}
-    \cventry{2007--2013}{Inżynier}{Polsko-Japońska Wyższa Szkoła Technik Komputerowych}{Warszawa}{\textit{Informatyka}}{Studia inżynierskie ukończone w katerze Sieci Komputerowych na specjalizacji Programowanie Systemowe i Sieciowe.}
+    \cventry{2007--2013}{Inżynier}{Polsko-Japońska Wyższa Szkoła Technik Komputerowych}{Warszawa}{\textit{Informatyka}}{Studia inżynierskie ukończone w katerze Sieci Komputerowych na specjalizacji ``Programowanie Systemowe i Sieciowe''.}
 
     \cventry{2005--2007}{Wykształcenie średnie}{Liceum Ogólnokształcące im. Joachima Lelewela}{Warszawa}{}{}
 
 \section{Praca Inżynierska}
     \cvitem{Tytuł}{Udostępnianie znakowych urządzeń fizycznych za pośrednictwem sieci w systemach GNU/Linux}
-    \cvitem{Specjaliacja}{Programowanie Systemowe i Sieciowe}
-    \cvitem{Opis}{Zestaw oprogramowania składający się z serwera oraz modułu jądra Linux udostepniający w sposób przezroczysty dla użytkowników urządzenia znakowe na zdalnych urządzeniach.}
+    \cvitem{Specjalizacja}{Programowanie Systemowe i Sieciowe}
+    \cvitem{Opis}{Zestaw oprogramowania składający się z serwera oraz modułu jądra Linux udostępniający w sposób przezroczysty dla użytkowników urządzenia znakowe na zdalnych urządzeniach.}
 
 \section{Języki obce}
     \cvitemwithcomment{Angielski}{Płynnie}{Łatwość w bezpośredniej komunikacji w języku angielskim. Dobra znajomość słownictwa technicznego.}
 
 \section{Umiejętności}
-    \cvitem{Języki}{C, C++, Java, bash, Powershell, SQL, Lua, \LaTeX, HTML, CSS}
+    \cvitem{Języki}{C, C++, Java, bash, Powershell, SQL, Lua, \LaTeX, HTML, CSS, UML}
     \cvitem{Systemy}{GNU/Linux(odmiany Debian oraz Gentoo), Windows, Windows Server 2003 i 2008}
     \cvitem{Sprzęt}{Komputery i peryferia, Serwery oraz stacje robocze DELL, Przełączniki oraz routery CISCO i DELL, Zasilacze awaryjne APC}
     \cvitem{Platformy}{Active Directory, Group Policy, MSSQL, Mysql, Postgresql, IIS, apache, nginx, lighttpd, Samba, NFS, Cacti, Graylog2}
     \cvitem{Narzędzia}{Microsoft SQL Studio, Microsoft Office, Git, GNU Make, VIM, Gimp, Photoshop}
-    \cvitem{Specjalistyczne}{Oprogramowanie ERP Exact Globe, Systemy księkoweania Sage, System księgowo-płacowy Płatnik, Większość europejskich platform bankowości elektronicznej}
+    \cvitem{Specjalistyczne}{Oprogramowanie ERP Exact Globe, Systemy księgowania Sage, System księgowo-płacowy Płatnik, Większość europejskich platform bankowości elektronicznej}
 
 \section{Doświadczenie}
 \cventry{2011--2013}{Specjalista IT}{Trinity Corporate Services Sp. z o.o.}{Warszawa}{Pełen etat}{Nadzorowanie oraz opieka nad infrastrukturą IT oraz rozwiązywanie wszelkich problemów z nią związanych. Wykonanie projektów modernizacji infrastruktury biur zagranicznych. Dodatkowo projekt migracji systemu pocztowego z lokalnych serwerów do zdalnego dostawcy.}
     \cvitem{}{Odpowiedzialny za:}
     \cvlistitem{Serwery Windows(2003 oraz 2008) oraz Linux(Ubuntu Server)}
-    \cvlistitem{Monitorowanie działaności systemów informatycznych(Cacti, Graylog2)}
+    \cvlistitem{Monitorowanie działalności systemów informatycznych(Cacti, Graylog2)}
     \cvlistitem{Automatyzację wszelkich procesów informatycznych(tworzenia kopii bezpieczeństwa, konwersji danych)}
     \cvlistitem{Infrastrukturę fizyczną środowiska IT(serwery, routery, komputery biurowe)}
     \cvlistitem{Zarządzenie bazami danych MSSQL oraz Mysql}
@@ -68,14 +63,14 @@
 
     \cventry{2012}{Umowa o dzieło}{Empirius Group Sp. z o.o.}{Warszawa}{Praca doraźna}{Stworzenie od podstaw infrastruktury komputerowej w biurze firmy dla około 10 komputerów. Wybór sprzętu i oprogramowania, instalacja i konfiguracja, rozłożenie kabli. W tym instalacja oraz konfiguracja serwera HP z systemem Windows Server 2008 na potrzeby bezpiecznej wymiany plików oraz współdzielenia drukarki oraz skanera.}
 
-    \cventry{2010}{Stażysta-Praktykant}{BIS Izomar Sp. z o.o.}{Warszawa}{Trzy miesięczny staż}{Staż skupiający się na obsłudze technicznej placówki budolanej w elektrociepłowni ``Żerań''. Odpowiedzlany za komputery oraz drukarki. W drugiej połowie stażu powieżone wykonanie konfiguracji VLAN na przałącznikach trzeciej warstwy firmy DELL na potrzeby rozdzielania sieci głównego biura firmy w celu zwiększenia bezpieczeństwa oraz ułatwienia zarządzania.}
+    \cventry{2010}{Stażysta-Praktykant}{BIS Izomar Sp. z o.o.}{Warszawa}{Trzy miesięczny staż}{Staż skupiający się na obsłudze technicznej placówki budowlanej w elektrociepłowni ``Żerań''. Odpowiedzialny za komputery oraz drukarki. W drugiej połowie stażu powierzone wykonanie konfiguracji VLAN na przełącznikach trzeciej warstwy firmy DELL na potrzeby rozdzielania sieci głównego biura firmy w celu zwiększenia bezpieczeństwa oraz ułatwienia zarządzania.}
     \cvitem{}{Zdobyte doświadczenie:}
     \cvlistitem{Struktura firmy i jej działanie - Roboty budowano-montażowe}
-    \cvlistitem{Przepisy o ochronie danych osobowych oraz tejemnic państwowych oraz służbowych}
+    \cvlistitem{Przepisy o ochronie danych osobowych oraz tajemnic państwowych oraz służbowych}
     \cvlistitem{Tworzenia infrastruktury małego biura na budowie ``Żerań''}
     
 \section{Zainteresowania}
-    \cvitem{}{Informatyka, ekonomia, historia, sociologia, filozofia, futurologia, astronomia, biologia molekularna}
+    \cvitem{}{Informatyka, ekonomia, historia, socjologia, filozofia, futurologia, astronomia, biologia molekularna}
 
 \bibliography{publications}
 \end{document}
