--- a/cv_pl.tex
+++ b/cv_pl.tex
@@ -38,7 +38,7 @@
     \cvitem{Opis}{Zestaw oprogramowania składający się z serwera oraz modułu jądra Linux udostępniający w sposób przezroczysty dla użytkowników urządzenia znakowe na zdalnych urządzeniach.}
 
 \section{Języki obce}
-    \cvitemwithcomment{Angielski}{Płynnie}{Łatwość w bezpośredniej komunikacji w języku angielskim. Dobra znajomość słownictwa technicznego.}
+    \cvitemwithcomment{Angielski}{Biegle}{Łatwość w bezpośredniej komunikacji w języku angielskim. Dobra znajomość słownictwa technicznego.}
 
 \section{Umiejętności}
     \cvitem{Języki}{C, C++, Java, bash, Powershell, SQL, Lua, \LaTeX, HTML, CSS, UML}
@@ -57,7 +57,7 @@
     \cvlistitem{Infrastrukturę fizyczną środowiska IT(serwery, routery, komputery biurowe)}
     \cvlistitem{Zarządzenie bazami danych MSSQL oraz Mysql}
     \cvlistitem{Zarządzenie serwerem poczty Postfix}
-    \cvlistitem{Obsługiwanie serwerów poczty Microsoft Exchange oraz Microsoft Hosted Exchange}
+    \cvlistitem{Obsługiwanie serwerów poczty Microsoft Exchange oraz Hosted Exchange}
     \cvlistitem{Odbieranie, rejestrowanie i rozwiązywanie problemów z infrastrukturą IT}
     \cvlistitem{Wsparcie techniczne użytkowników oraz klientów}
 
