literówki i dodałem hyper-v i virtualboxa

--- a/cv_pl.tex
+++ b/cv_pl.tex
@@ -35,7 +35,7 @@
 \section{Praca Inżynierska}
     \cvitem{Tytuł}{Udostępnianie znakowych urządzeń fizycznych za pośrednictwem sieci w systemach GNU/Linux}
     \cvitem{Specjalizacja}{Programowanie Systemowe i Sieciowe}
-    \cvitem{Opis}{Zestaw oprogramowania składający się z serwera oraz modułu jądra Linux udostępniający w sposób przezroczysty dla użytkowników urządzenia znakowe na zdalnych urządzeniach.}
+    \cvitem{Opis}{Zestaw oprogramowania składający się z serwera oraz modułu jądra Linux udostępniający w sposób przezroczysty dla użytkowników urządzenia znakowe na zdalnych maszynach.}
 
 \section{Języki obce}
     \cvitemwithcomment{Angielski}{Biegle}{Łatwość w bezpośredniej komunikacji w języku angielskim. Dobra znajomość słownictwa technicznego.}
@@ -44,7 +44,7 @@
     \cvitem{Języki}{C, C++, Java, bash, Powershell, SQL, Lua, \LaTeX, HTML, CSS, UML}
     \cvitem{Systemy}{GNU/Linux(odmiany Debian oraz Gentoo), Windows, Windows Server 2003 i 2008}
     \cvitem{Sprzęt}{Komputery i peryferia, Serwery oraz stacje robocze DELL, Przełączniki oraz routery CISCO i DELL, Zasilacze awaryjne APC}
-    \cvitem{Platformy}{Active Directory, Group Policy, MSSQL, Mysql, Postgresql, IIS, apache, nginx, lighttpd, Samba, NFS, Cacti, Graylog2}
+    \cvitem{Platformy}{Active Directory, Group Policy, Hyper-V, VirtualBox, MSSQL, Mysql, Postgresql, IIS, apache, nginx, lighttpd, Samba, NFS, Cacti, Graylog2}
     \cvitem{Narzędzia}{Microsoft SQL Studio, Microsoft Office, Git, GNU Make, VIM, Gimp, Photoshop}
     \cvitem{Specjalistyczne}{Oprogramowanie ERP Exact Globe, Systemy księgowania Sage, System księgowo-płacowy Płatnik, Większość europejskich platform bankowości elektronicznej}
 
@@ -63,14 +63,18 @@
 
     \cventry{2012}{Umowa o dzieło}{Empirius Group Sp. z o.o.}{Warszawa}{Praca doraźna}{Stworzenie od podstaw infrastruktury komputerowej w biurze firmy dla około 10 komputerów. Wybór sprzętu i oprogramowania, instalacja i konfiguracja, rozłożenie kabli. W tym instalacja oraz konfiguracja serwera HP z systemem Windows Server 2008 na potrzeby bezpiecznej wymiany plików oraz współdzielenia drukarki oraz skanera.}
 
-    \cventry{2010}{Stażysta-Praktykant}{BIS Izomar Sp. z o.o.}{Warszawa}{Trzy miesięczny staż}{Staż skupiający się na obsłudze technicznej placówki budowlanej w elektrociepłowni ``Żerań''. Odpowiedzialny za komputery oraz drukarki. W drugiej połowie stażu powierzone wykonanie konfiguracji VLAN na przełącznikach trzeciej warstwy firmy DELL na potrzeby rozdzielania sieci głównego biura firmy w celu zwiększenia bezpieczeństwa oraz ułatwienia zarządzania.}
+    \cventry{2010}{Stażysta-Praktykant}{BIS Izomar Sp. z o.o.}{Warszawa}{Dwumiesięczny staż}{Staż skupiający się na obsłudze technicznej placówki budowlanej w elektrociepłowni ``Żerań''. Odpowiedzialny za komputery oraz drukarki. W drugiej połowie stażu powierzone wykonanie konfiguracji VLAN na przełącznikach trzeciej warstwy firmy DELL na potrzeby rozdzielania sieci głównego biura firmy w celu zwiększenia bezpieczeństwa oraz ułatwienia zarządzania.}
     \cvitem{}{Zdobyte doświadczenie:}
     \cvlistitem{Struktura firmy i jej działanie - Roboty budowano-montażowe}
     \cvlistitem{Przepisy o ochronie danych osobowych oraz tajemnic państwowych oraz służbowych}
-    \cvlistitem{Tworzenia infrastruktury małego biura na budowie ``Żerań''}
+    \cvlistitem{Tworzenia infrastruktury IT małego biura na budowie ``Żerań''}
+
+\section{Kursy i certyfikaty}
+    \cvitem{2011}{PJWSTK Certificate in Business English, poziom C1}
+    \cvitem{2009}{Ukończony kurs CISCO CCNA}
+    \cvitem{2009}{Ukończony kurs pierwszego stopnia Linux Professional Institute}
     
 \section{Zainteresowania}
     \cvitem{}{Informatyka, ekonomia, historia, socjologia, filozofia, futurologia, astronomia, biologia molekularna}
 
-\bibliography{publications}
 \end{document}
