--- a/cv_en.tex
+++ b/cv_en.tex
@@ -38,7 +38,7 @@
     \cvitem{Description}{A set of software made up of a server and a Linux kernel module that lets processes access a physical device that is connected to a different machine in a completely transparent way.}
 
 \section{Foreign languages}
-    \cvitemwithcomment{English}{Fluent}{Easy of direct communication and a extensive technical vocabulary.}
+    \cvitemwithcomment{English}{Fluent}{Easy of direct communication and an extensive technical vocabulary.}
 
 \section{Knowledge}
     \cvitem{Languages}{C, C++, Java, bash, Powershell, SQL, Lua, \LaTeX, HTML, CSS, UML}
@@ -46,10 +46,10 @@
     \cvitem{Hardware}{Computers and peripherals, DELL workstations and servers, CISCO and DELL switches and routers, APC backup power supplies}
     \cvitem{Platforms}{Active Directory, Group Policy, Hyper-V, VirtualBox, MSSQL, Mysql, Postgresql, IIS, apache, nginx, lighttpd, Samba, NFS, Cacti, Graylog2}
     \cvitem{Tools}{Microsoft SQL Studio, Microsoft Office, Git, GNU Make, VIM, Gimp, Photoshop}
-    \cvitem{Extra}{Exact Globe ERP software, Sage accounting systems, Accounting and payroll system Płatnik, t of european online banking platforms}
+    \cvitem{Extra}{Exact Globe ERP software, Sage accounting systems, Accounting and payroll system Płatnik, most of european online banking platforms}
 
 \section{Experience}
-\cventry{2011--2013}{IT Specialist}{Trinity Corporate Services Sp. z o.o.}{Warsaw}{Full time}{Nadzorowanie oraz opieka nad infrastrukturą IT oraz rozwiązywanie wszelkich problemów z nią związanych. Wykonanie projektów modernizacji infrastruktury biur zagranicznych. Dodatkowo projekt migracji systemu pocztowego z lokalnych serwerów do zdalnego dostawcy.}
+\cventry{2011--2013}{IT Specialist}{Trinity Corporate Services Sp. z o.o.}{Warsaw}{Full time}{Monitoring and maintenance of IT infrastructure as well as resolving all related issues. Execution of IT projects such us: migration of local mail servers to a remote host, updating of infrastructure in remote offices.}
     \cvitem{}{Responsible for:}
     \cvlistitem{Windows 2003 and 2008 as well as Linux(Ubuntu Server) servers}
     \cvlistitem{Performance monitoring of IT infrastructure(Cacti, Graylog2)}
@@ -61,14 +61,14 @@
     \cvlistitem{Receiving, registering and resolving all IT related issues}
     \cvlistitem{Providing support to all users and clients}
 
-    \cventry{2012}{Contract Work}{Empirius Group Sp. z o.o.}{Warsaw}{Ad hoc work}{Stworzenie od podstaw infrastruktury komputerowej w biurze firmy dla około 10 komputerów. Wybór sprzętu i oprogramowania, instalacja i konfiguracja, rozłożenie kabli. W tym instalacja oraz konfiguracja serwera HP z systemem Windows Server 2008 na potrzeby bezpiecznej wymiany plików oraz współdzielenia drukarki oraz skanera.}
+    \cventry{2012}{Contract Work}{Empirius Group Sp. z o.o.}{Warsaw}{Ad hoc work}{Creation of whole IT infrastructure for a small company office with around 10 workstations. Selecting hardware and software, installation and configuration as well as installing cabling. Included was installation and configuration of a HP server running Wwindows Server 2008 to facilitate secure sharing of files as well as a printer and a scanner}
 
-    \cventry{2010}{Intern-Trainee}{BIS Izomar Sp. z o.o.}{Warsaw}{Three month internship}{Staż skupiający się na obsłudze technicznej placówki budolanej w elektrociepłowni ``Żerań''. Odpowiedzlany za komputery oraz drukarki. W drugiej połowie stażu powieżone wykonanie konfiguracji VLAN na przałącznikach trzeciej warstwy firmy DELL na potrzeby rozdzielania sieci głównego biura firmy w celu zwiększenia bezpieczeństwa oraz ułatwienia zarządzania.}
+    \cventry{2010}{Intern-Trainee}{BIS Izomar Sp. z o.o.}{Warsaw}{Three month internship}{Internship focusing on providing technical assistance on construction site at power plant ``Żerań''. Responsible for computers and printers. During the second half of internship tasked with developing a VLAN configuration using third layer switches that will improve security and ease of management in the main office.}
     \cvitem{}{Acquired experience:}
-    \cvlistitem{Struktura firmy i jej działanie - Roboty budowano-montażowe}
-    \cvlistitem{Przepisy o ochronie danych osobowych oraz tejemnic państwowych oraz służbowych}
-    \cvlistitem{Tworzenia infrastruktury małego biura na budowie ``Żerań''}
-    
+    \cvlistitem{Structure of companies and their inner workings - Construction work}
+    \cvlistitem{Regulation regarding security of personal, governmental and business data}
+    \cvlistitem{Creating IT infrastructure in a small office on construction site ``Żerań''}
+
 \section{Courses and certificates}
     \cvitem{2011}{PJWSTK Certificate in Business English, level C1}
     \cvitem{2009}{Completed CISCO CCNA course}
