poprawiłęm datę urodzenia na angielski

--- a/cv_en.tex
+++ b/cv_en.tex
@@ -21,7 +21,7 @@
 \phone{+48~(22)~833~77~50}
 \email{panswiata@gmail.com}
 \homepage{github.com/PonderingGrower}
-\extrainfo{Urodzony 01.02.1988}
+\extrainfo{Born on 01.02.1988}
 \photo[64pt][0.4pt]{me}
 
 \begin{document}
