porawiłęm czas trwania stażu i zboldowałem tytuł pracy

--- a/cv_en.tex
+++ b/cv_en.tex
@@ -33,9 +33,9 @@
     \cventry{2005--2007}{Secondary School}{High School of Joachim Lelewel}{Warsaw}{}{}
 
 \section{Engineering thesis}
-    \cvitem{Title}{Sharing of character devices over networks in GNU/Linux systems}
+\cvitem{Title}{\textbf{Sharing of character devices over networks in GNU/Linux systems}}
     \cvitem{Specialization}{System and Network Programming}
-    \cvitem{Description}{A set of software made up of a server and a Linux kernel module that lets processes access a physical device that is connected to a different machine in a completely transparent way.}
+    \cvitem{Description}{A set of software made up of a server and a Linux kernel module that lets processes access a physical device that is connected to a remote machine in a completely transparent way.}
 
 \section{Foreign languages}
     \cvitemwithcomment{English}{Fluent}{Easy of direct communication and an extensive technical vocabulary.}
@@ -63,7 +63,7 @@
 
     \cventry{2012}{Contract Work}{Empirius Group Sp. z o.o.}{Warsaw}{Ad hoc work}{Creation of whole IT infrastructure for a small company office with around 10 workstations. Selecting hardware and software, installation and configuration as well as installing cabling. Included was installation and configuration of a HP server running Wwindows Server 2008 to facilitate secure sharing of files as well as a printer and a scanner}
 
-    \cventry{2010}{Intern-Trainee}{BIS Izomar Sp. z o.o.}{Warsaw}{Three month internship}{Internship focusing on providing technical assistance on construction site at power plant ``Żerań''. Responsible for computers and printers. During the second half of internship tasked with developing a VLAN configuration using third layer switches that will improve security and ease of management in the main office.}
+    \cventry{2010}{Intern-Trainee}{BIS Izomar Sp. z o.o.}{Warsaw}{Two month internship}{Internship focusing on providing technical assistance on construction site at power plant ``Żerań''. Responsible for computers and printers. During the second half of internship tasked with developing a VLAN configuration using third layer switches that will improve security and ease of management in the main office.}
     \cvitem{}{Acquired experience:}
     \cvlistitem{Structure of companies and their inner workings - Construction work}
     \cvlistitem{Regulation regarding security of personal, governmental and business data}
