zboldowałem tytuł pracy, poprawiłęm sformułowanie w opisie doświaedczenia

--- a/cv_pl.tex
+++ b/cv_pl.tex
@@ -33,7 +33,7 @@
     \cventry{2005--2007}{Wykształcenie średnie}{Liceum Ogólnokształcące im. Joachima Lelewela}{Warszawa}{}{}
 
 \section{Praca Inżynierska}
-    \cvitem{Tytuł}{Udostępnianie znakowych urządzeń fizycznych za pośrednictwem sieci w systemach GNU/Linux}
+\cvitem{Tytuł}{\textbf{Udostępnianie znakowych urządzeń fizycznych za pośrednictwem sieci w systemach GNU/Linux}}
     \cvitem{Specjalizacja}{Programowanie Systemowe i Sieciowe}
     \cvitem{Opis}{Zestaw oprogramowania składający się z serwera oraz modułu jądra Linux udostępniający w sposób przezroczysty dla użytkowników urządzenia znakowe na zdalnych maszynach.}
 
@@ -49,7 +49,7 @@
     \cvitem{Specjalistyczne}{Oprogramowanie ERP Exact Globe, Systemy księgowania Sage, System księgowo-płacowy Płatnik, Większość europejskich platform bankowości elektronicznej}
 
 \section{Doświadczenie}
-\cventry{2011--2013}{Specjalista IT}{Trinity Corporate Services Sp. z o.o.}{Warszawa}{Pełen etat}{Nadzorowanie oraz opieka nad infrastrukturą IT oraz rozwiązywanie wszelkich problemów z nią związanych. Wykonanie projektów modernizacji infrastruktury biur zagranicznych. Dodatkowo projekt migracji systemu pocztowego z lokalnych serwerów do zdalnego dostawcy.}
+\cventry{2011--2013}{Specjalista IT}{Trinity Corporate Services Sp. z o.o.}{Warszawa}{Pełen etat}{Nadzorowanie oraz opieka nad infrastrukturą IT oraz rozwiązywanie wszelkich problemów z nią związanych. Wykonywanie projektów informatycznych, np.: migracji systemu pocztowego z lokalnych serwerów do zdalnego dostawcy, modernizacji infrastruktury biur zagranicznych.}
     \cvitem{}{Odpowiedzialny za:}
     \cvlistitem{Serwery Windows(2003 oraz 2008) oraz Linux(Ubuntu Server)}
     \cvlistitem{Monitorowanie działalności systemów informatycznych(Cacti, Graylog2)}
@@ -61,7 +61,7 @@
     \cvlistitem{Odbieranie, rejestrowanie i rozwiązywanie problemów z infrastrukturą IT}
     \cvlistitem{Wsparcie techniczne użytkowników oraz klientów}
 
-    \cventry{2012}{Umowa o dzieło}{Empirius Group Sp. z o.o.}{Warszawa}{Praca doraźna}{Stworzenie od podstaw infrastruktury komputerowej w biurze firmy dla około 10 komputerów. Wybór sprzętu i oprogramowania, instalacja i konfiguracja, rozłożenie kabli. W tym instalacja oraz konfiguracja serwera HP z systemem Windows Server 2008 na potrzeby bezpiecznej wymiany plików oraz współdzielenia drukarki oraz skanera.}
+    \cventry{2012}{Umowa o dzieło}{Empirius Group Sp. z o.o.}{Warszawa}{Praca doraźna}{Stworzenie od podstaw infrastruktury komputerowej w małym biurze firmy dla około 10 komputerów. Wybór sprzętu i oprogramowania, instalacja i konfiguracja, rozłożenie kabli. W tym instalacja oraz konfiguracja serwera HP z systemem Windows Server 2008 na potrzeby bezpiecznej wymiany plików oraz współdzielenia drukarki oraz skanera.}
 
     \cventry{2010}{Stażysta-Praktykant}{BIS Izomar Sp. z o.o.}{Warszawa}{Dwumiesięczny staż}{Staż skupiający się na obsłudze technicznej placówki budowlanej w elektrociepłowni ``Żerań''. Odpowiedzialny za komputery oraz drukarki. W drugiej połowie stażu powierzone wykonanie konfiguracji VLAN na przełącznikach trzeciej warstwy firmy DELL na potrzeby rozdzielania sieci głównego biura firmy w celu zwiększenia bezpieczeństwa oraz ułatwienia zarządzania.}
     \cvitem{}{Zdobyte doświadczenie:}
@@ -73,7 +73,7 @@
     \cvitem{2011}{PJWSTK Certificate in Business English, poziom C1}
     \cvitem{2009}{Ukończony kurs CISCO CCNA}
     \cvitem{2009}{Ukończony kurs pierwszego stopnia Linux Professional Institute}
-    
+
 \section{Zainteresowania}
     \cvitem{}{Informatyka, ekonomia, historia, socjologia, filozofia, futurologia, astronomia, biologia molekularna}
 
