rozszeżyłem narządzia i dodałem cudzysłów do sepcjalizacji

--- a/cv_en.tex
+++ b/cv_en.tex
@@ -28,7 +28,7 @@
 \makecvtitle
 
 \section{Education}
-    \cventry{2007--2012}{Engineer}{Polish-Japanese Institute of Information Technology}{Warsaw}{\textit{Informatics}}{Studies in the field of Information Technology and Computer Science in Computer Networks department with specialization in System and Network Programming}
+    \cventry{2007--2012}{Engineer}{Polish-Japanese Institute of Information Technology}{Warsaw}{\textit{Informatics}}{Studies in the field of Information Technology and Computer Science in Computer Networks department with specialization in ``System and Network Programming''}
 
     \cventry{2005--2007}{Secondary School}{High School of Joachim Lelewel}{Warsaw}{}{}
 
@@ -45,7 +45,7 @@
     \cvitem{Systems}{GNU/Linux(all flavours of Debian and Gentoo), Windows, Windows Server 2003 i 2008}
     \cvitem{Hardware}{Computers and peripherals, DELL workstations and servers, CISCO and DELL switches and routers, APC backup power supplies}
     \cvitem{Platforms}{Active Directory, Group Policy, Hyper-V, VirtualBox, MSSQL, Mysql, Postgresql, IIS, apache, nginx, lighttpd, Samba, NFS, Cacti, Graylog2}
-    \cvitem{Tools}{Microsoft SQL Studio, Microsoft Office, Git, GNU Make, VIM, Gimp, Photoshop}
+    \cvitem{Tools}{Microsoft RSAT, MS Powershell, MS SQL Studio, MS Office Suite, Git, GNU Make, VIM, Gimp, Photoshop}
     \cvitem{Extra}{Exact Globe ERP software, Sage accounting systems, Accounting and payroll system Płatnik, most of european online banking platforms}
 
 \section{Experience}
