--- a/cv_pl.tex
+++ b/cv_pl.tex
@@ -42,10 +42,10 @@
 
 \section{Umiejętności}
     \cvitem{Języki}{C, C++, Java, bash, Powershell, SQL, Lua, \LaTeX, HTML, CSS, UML}
-    \cvitem{Systemy}{GNU/Linux(odmiany Debian oraz Gentoo), Windows, Windows Server 2003 i 2008}
+    \cvitem{Systemy}{GNU/Linux(wszystkie odmiany Debian oraz Gentoo), Windows, Windows Server 2003 i 2008}
     \cvitem{Sprzęt}{Komputery i peryferia, Serwery oraz stacje robocze DELL, Przełączniki oraz routery CISCO i DELL, Zasilacze awaryjne APC}
     \cvitem{Platformy}{Active Directory, Group Policy, Hyper-V, VirtualBox, MSSQL, Mysql, Postgresql, IIS, apache, nginx, lighttpd, Samba, NFS, Cacti, Graylog2}
-    \cvitem{Narzędzia}{Microsoft SQL Studio, Microsoft Office, Git, GNU Make, VIM, Gimp, Photoshop}
+    \cvitem{Narzędzia}{Microsoft RSAT, MS Powershell, MS SQL Studio, Pakiet MS Office, Git, GNU Make, VIM, Gimp, Photoshop}
     \cvitem{Specjalistyczne}{Oprogramowanie ERP Exact Globe, Systemy księgowania Sage, System księgowo-płacowy Płatnik, Większość europejskich platform bankowości elektronicznej}
 
 \section{Doświadczenie}
