poprawiłęm opis rodzajów projektów w trinity

--- a/cv_en.tex
+++ b/cv_en.tex
@@ -49,7 +49,7 @@
     \cvitem{Extra}{Exact Globe ERP software, Sage accounting systems, Accounting and payroll system Płatnik, most of european online banking platforms}
 
 \section{Experience}
-\cventry{2011--2013}{IT Specialist}{Trinity Corporate Services Sp. z o.o.}{Warsaw}{Full time}{Monitoring and maintenance of IT infrastructure as well as resolving all related issues. Execution of IT projects such us: migration of local mail servers to a remote host, updating of infrastructure in remote offices.}
+\cventry{2011--2013}{IT Specialist}{Trinity Corporate Services Sp. z o.o.}{Warsaw}{Full time}{Monitoring and maintenance of IT infrastructure as well as resolving all related issues. Execution of IT projects such us: migration of local mail servers to a remote hosting provider, updating of infrastructure in remote offices.}
     \cvitem{}{Responsible for:}
     \cvlistitem{Windows 2003 and 2008 as well as Linux(Ubuntu Server) servers}
     \cvlistitem{Performance monitoring of IT infrastructure(Cacti, Graylog2)}
