dodałem trzci rodzaj projektu IT

--- a/cv_pl.tex
+++ b/cv_pl.tex
@@ -49,7 +49,7 @@
     \cvitem{Specjalistyczne}{Oprogramowanie ERP Exact Globe, Systemy księgowania Sage, System księgowo-płacowy Płatnik, Większość europejskich platform bankowości elektronicznej}
 
 \section{Doświadczenie}
-\cventry{2011--2013}{Specjalista IT}{Trinity Corporate Services Sp. z o.o.}{Warszawa}{Pełen etat}{Nadzorowanie oraz opieka nad infrastrukturą IT oraz rozwiązywanie wszelkich problemów z nią związanych. Wykonywanie projektów informatycznych, np.: migracji systemu pocztowego z lokalnych serwerów do zdalnego dostawcy, modernizacji infrastruktury biur zagranicznych.}
+\cventry{2011--2013}{Specjalista IT}{Trinity Corporate Services Sp. z o.o.}{Warszawa}{Pełen etat}{Nadzorowanie oraz opieka nad infrastrukturą IT oraz rozwiązywanie wszelkich problemów z nią związanych. Wykonywanie projektów informatycznych, np.: migracji systemu pocztowego z lokalnych serwerów do zdalnego dostawcy, modernizacji infrastruktury biur zagranicznych lub wdrażanie nowego oprogramowania w biurach.}
     \cvitem{}{Odpowiedzialny za:}
     \cvlistitem{Serwery Windows(2003 oraz 2008) oraz Linux(Ubuntu Server)}
     \cvlistitem{Monitorowanie działalności systemów informatycznych(Cacti, Graylog2)}
