--- a/cv_en.tex
+++ b/cv_en.tex
@@ -77,4 +77,5 @@
 \section{Interests}
     \cvitem{}{Informatics, economics, history, sociology, philosophy, futurology, astronomy, molecular biology}
 
+\lfoot{Wyrażam zgodę na przetwarzanie moich danych osobowych zawartych w ofercie przy realizacji procesów rekrutacji i selekcji zgodnie z przepisami ustawy z 29.08.1997 r. o ochronie danych osobowych (Dz. U. z 2002r. Nr 101, poz. 926).}
 \end{document}
