dodałem odstępy między doświadczeniami

--- a/cv_en.tex
+++ b/cv_en.tex
@@ -61,8 +61,10 @@
     \cvlistitem{Receiving, registering and resolving all IT related issues}
     \cvlistitem{Providing support to all users and clients}
 
+    \vspace*{4mm}
     \cventry{2012}{Contract Work}{Empirius Group Sp. z o.o.}{Warsaw}{Ad hoc work}{Creation of whole IT infrastructure for a small company office with around 10 workstations. Selecting hardware and software, installation and configuration as well as installing cabling. Included was installation and configuration of a HP server running Wwindows Server 2008 to facilitate secure sharing of files as well as a printer and a scanner}
 
+    \vspace*{4mm}
     \cventry{2010}{Intern-Trainee}{BIS Izomar Sp. z o.o.}{Warsaw}{Two month internship}{Internship focusing on providing technical assistance on construction site at power plant ``Żerań''. Responsible for computers and printers. During the second half of internship tasked with developing a VLAN configuration using third layer switches that will improve security and ease of management in the main office.}
     \cvitem{}{Acquired experience:}
     \cvlistitem{Structure of companies and their inner workings - Construction work}
