--- a/cv_pl.tex
+++ b/cv_pl.tex
@@ -61,8 +61,10 @@
     \cvlistitem{Odbieranie, rejestrowanie i rozwiązywanie problemów z infrastrukturą IT}
     \cvlistitem{Wsparcie techniczne użytkowników oraz klientów}
 
+    \vspace*{4mm}
     \cventry{2012}{Umowa o dzieło}{Empirius Group Sp. z o.o.}{Warszawa}{Praca doraźna}{Stworzenie od podstaw infrastruktury komputerowej w małym biurze firmy dla około 10 komputerów. Wybór sprzętu i oprogramowania, instalacja i konfiguracja, rozłożenie kabli. W tym instalacja oraz konfiguracja serwera HP z systemem Windows Server 2008 na potrzeby bezpiecznej wymiany plików oraz współdzielenia drukarki oraz skanera.}
 
+    \vspace*{4mm}
     \cventry{2010}{Stażysta-Praktykant}{BIS Izomar Sp. z o.o.}{Warszawa}{Dwumiesięczny staż}{Staż skupiający się na obsłudze technicznej placówki budowlanej w elektrociepłowni ``Żerań''. Odpowiedzialny za komputery oraz drukarki. W drugiej połowie stażu powierzone wykonanie konfiguracji VLAN na przełącznikach trzeciej warstwy firmy DELL na potrzeby rozdzielania sieci głównego biura firmy w celu zwiększenia bezpieczeństwa oraz ułatwienia zarządzania.}
     \cvitem{}{Zdobyte doświadczenie:}
     \cvlistitem{Struktura firmy i jej działanie - Roboty budowano-montażowe}
