dodałem odstęp w edukacji

--- a/cv_en.tex
+++ b/cv_en.tex
@@ -30,6 +30,7 @@
 \section{Education}
     \cventry{2007--2013}{Engineer}{Polish-Japanese Institute of Information Technology}{Warsaw}{\textit{Informatics}}{Engineering studies in Computer Networks department with specialization in ``System and Network Programming''}
 
+    \vspace*{4mm}
     \cventry{2005--2007}{Secondary School}{High School of Joachim Lelewel}{Warsaw}{}{}
 
 \section{Engineering thesis}
