--- a/cv_pl.tex
+++ b/cv_pl.tex
@@ -30,6 +30,7 @@
 \section{Edukacja}
     \cventry{2007--2013}{Inżynier}{Polsko-Japońska Wyższa Szkoła Technik Komputerowych}{Warszawa}{\textit{Informatyka}}{Studia inżynierskie ukończone w katerze Sieci Komputerowych na specjalizacji ``Programowanie Systemowe i Sieciowe''.}
 
+    \vspace*{4mm}
     \cventry{2005--2007}{Wykształcenie średnie}{Liceum Ogólnokształcące im. Joachima Lelewela}{Warszawa}{}{}
 
 \section{Praca Inżynierska}
