zwiększyłem zdjęcie i poprawiłęm formatowanie

--- a/cv_pl.tex
+++ b/cv_pl.tex
@@ -10,7 +10,7 @@
 \usepackage[utf8]{inputenc}
 
 %% Adjust the page margins
-\usepackage[scale=0.75]{geometry}
+\usepackage[scale=0.84]{geometry}
 
 %% Personal data
 \firstname{Jakub}
@@ -22,7 +22,7 @@
 \email{panswiata@gmail.com}
 \homepage{github.com/PonderingGrower}
 \extrainfo{Urodzony 01.02.1988}
-\photo[64pt][0.4pt]{me}
+\photo[74pt][0.5pt]{me}
 
 \begin{document}
 \makecvtitle
@@ -30,8 +30,31 @@
 \section{Edukacja}
     \cventry{2007--2013}{Inżynier}{Polsko-Japońska Wyższa Szkoła Technik Komputerowych}{Warszawa}{\textit{Informatyka}}{Studia inżynierskie ukończone w katerze Sieci Komputerowych na specjalizacji ``Programowanie Systemowe i Sieciowe''.}
 
-    \vspace*{4mm}
+    \vspace*{2mm}
     \cventry{2005--2007}{Wykształcenie średnie}{Liceum Ogólnokształcące im. Joachima Lelewela}{Warszawa}{}{}
+
+\section{Doświadczenie}
+\cventry{2011--2013}{Specjalista IT}{Trinity Corporate Services Sp. z o.o.}{Warszawa}{Pełen etat}{Nadzorowanie i opieka nad infrastrukturą IT oraz rozwiązywanie wszelkich problemów z nią związanych. Wykonywanie projektów informatycznych, np.: migracji systemu pocztowego z lokalnych serwerów do zdalnego dostawcy, modernizacji infrastruktury biur zagranicznych lub wdrażanie nowego oprogramowania.}
+    \cvitem{}{Odpowiedzialny za:}
+    \cvlistitem{Serwery Windows(2003 oraz 2008) oraz Linux(Ubuntu Server)}
+    \cvlistitem{Monitorowanie działalności systemów informatycznych(Cacti, Graylog2)}
+    \cvlistitem{Automatyzację wszelkich procesów informatycznych( kopie bezpieczeństwa, konwersje danych)}
+    \cvlistitem{Infrastrukturę fizyczną środowiska IT(serwery, routery, komputery biurowe)}
+    \cvlistitem{Zarządzenie bazami danych MSSQL oraz Mysql}
+    \cvlistitem{Zarządzenie serwerem poczty Postfix}
+    \cvlistitem{Obsługiwanie serwerów poczty Microsoft Exchange oraz Hosted Exchange}
+    \cvlistitem{Odbieranie, rejestrowanie i rozwiązywanie problemów z infrastrukturą IT}
+    \cvlistitem{Wsparcie techniczne użytkowników oraz klientów}
+
+    \vspace*{2mm}
+    \cventry{2012}{Umowa o dzieło}{Empirius Group Sp. z o.o.}{Warszawa}{Praca doraźna}{Stworzenie od podstaw infrastruktury komputerowej w małym biurze firmy dla około 10 komputerów. Wybór sprzętu i oprogramowania, instalacja i konfiguracja, rozłożenie kabli. W tym instalacja oraz konfiguracja serwera HP z systemem Windows Server 2008 na potrzeby bezpiecznej wymiany plików oraz współdzielenia drukarki oraz skanera.}
+
+    \vspace*{2mm}
+    \cventry{2010}{Stażysta-Praktykant}{BIS Izomar Sp. z o.o.}{Warszawa}{Dwumiesięczny staż}{Staż skupiający się na obsłudze technicznej placówki budowlanej w elektrociepłowni ``Żerań''. Odpowiedzialny za komputery oraz drukarki. W drugiej połowie stażu powierzone wykonanie konfiguracji VLAN na przełącznikach trzeciej warstwy firmy DELL na potrzeby rozdzielania sieci głównego biura firmy w celu zwiększenia bezpieczeństwa oraz ułatwienia zarządzania.}
+    \cvitem{}{Zdobyte doświadczenie:}
+    \cvlistitem{Struktura firmy i jej działanie - Roboty budowano-montażowe}
+    \cvlistitem{Przepisy o ochronie danych osobowych oraz tajemnic państwowych oraz służbowych}
+    \cvlistitem{Tworzenia infrastruktury IT małego biura na budowie ``Żerań''}
 
 \section{Praca Inżynierska}
 \cvitem{Tytuł}{\textbf{Udostępnianie znakowych urządzeń fizycznych za pośrednictwem sieci w systemach GNU/Linux}}
@@ -45,32 +68,9 @@
     \cvitem{Języki}{C, C++, Java, bash, Powershell, SQL, Lua, \LaTeX, HTML, CSS, UML}
     \cvitem{Systemy}{GNU/Linux(wszystkie odmiany Debian oraz Gentoo), Windows, Windows Server 2003 i 2008}
     \cvitem{Sprzęt}{Komputery i peryferia, Serwery oraz stacje robocze DELL, Przełączniki oraz routery CISCO i DELL, Zasilacze awaryjne APC}
-    \cvitem{Platformy}{Active Directory, Group Policy, Hyper-V, VirtualBox, MSSQL, Mysql, Postgresql, IIS, apache, nginx, lighttpd, Samba, NFS, Cacti, Graylog2}
+    \cvitem{Platformy}{Active Directory, Group Policy, Hyper-V, VirtualBox, MSSQL, Mysql, Postgresql, IIS, apache, nginx, lighttpd, Samba, NFS, rsync, Cacti, Graylog2}
     \cvitem{Narzędzia}{Microsoft RSAT, MS Powershell, MS SQL Studio, Pakiet MS Office, Git, GNU Make, VIM, Gimp, Photoshop}
     \cvitem{Specjalistyczne}{Oprogramowanie ERP Exact Globe, Systemy księgowania Sage, System księgowo-płacowy Płatnik, Większość europejskich platform bankowości elektronicznej}
-
-\section{Doświadczenie}
-\cventry{2011--2013}{Specjalista IT}{Trinity Corporate Services Sp. z o.o.}{Warszawa}{Pełen etat}{Nadzorowanie oraz opieka nad infrastrukturą IT oraz rozwiązywanie wszelkich problemów z nią związanych. Wykonywanie projektów informatycznych, np.: migracji systemu pocztowego z lokalnych serwerów do zdalnego dostawcy, modernizacji infrastruktury biur zagranicznych lub wdrażanie nowego oprogramowania w biurach.}
-    \cvitem{}{Odpowiedzialny za:}
-    \cvlistitem{Serwery Windows(2003 oraz 2008) oraz Linux(Ubuntu Server)}
-    \cvlistitem{Monitorowanie działalności systemów informatycznych(Cacti, Graylog2)}
-    \cvlistitem{Automatyzację wszelkich procesów informatycznych(tworzenia kopii bezpieczeństwa, konwersji danych)}
-    \cvlistitem{Infrastrukturę fizyczną środowiska IT(serwery, routery, komputery biurowe)}
-    \cvlistitem{Zarządzenie bazami danych MSSQL oraz Mysql}
-    \cvlistitem{Zarządzenie serwerem poczty Postfix}
-    \cvlistitem{Obsługiwanie serwerów poczty Microsoft Exchange oraz Hosted Exchange}
-    \cvlistitem{Odbieranie, rejestrowanie i rozwiązywanie problemów z infrastrukturą IT}
-    \cvlistitem{Wsparcie techniczne użytkowników oraz klientów}
-
-    \vspace*{4mm}
-    \cventry{2012}{Umowa o dzieło}{Empirius Group Sp. z o.o.}{Warszawa}{Praca doraźna}{Stworzenie od podstaw infrastruktury komputerowej w małym biurze firmy dla około 10 komputerów. Wybór sprzętu i oprogramowania, instalacja i konfiguracja, rozłożenie kabli. W tym instalacja oraz konfiguracja serwera HP z systemem Windows Server 2008 na potrzeby bezpiecznej wymiany plików oraz współdzielenia drukarki oraz skanera.}
-
-    \vspace*{4mm}
-    \cventry{2010}{Stażysta-Praktykant}{BIS Izomar Sp. z o.o.}{Warszawa}{Dwumiesięczny staż}{Staż skupiający się na obsłudze technicznej placówki budowlanej w elektrociepłowni ``Żerań''. Odpowiedzialny za komputery oraz drukarki. W drugiej połowie stażu powierzone wykonanie konfiguracji VLAN na przełącznikach trzeciej warstwy firmy DELL na potrzeby rozdzielania sieci głównego biura firmy w celu zwiększenia bezpieczeństwa oraz ułatwienia zarządzania.}
-    \cvitem{}{Zdobyte doświadczenie:}
-    \cvlistitem{Struktura firmy i jej działanie - Roboty budowano-montażowe}
-    \cvlistitem{Przepisy o ochronie danych osobowych oraz tajemnic państwowych oraz służbowych}
-    \cvlistitem{Tworzenia infrastruktury IT małego biura na budowie ``Żerań''}
 
 \section{Kursy i certyfikaty}
     \cvitem{2011}{PJWSTK Certificate in Business English, poziom C1}
