--- a/cv_en.tex
+++ b/cv_en.tex
@@ -10,7 +10,7 @@
 \usepackage[utf8]{inputenc}
 
 %% Adjust the page margins
-\usepackage[scale=0.75]{geometry}
+\usepackage[scale=0.84]{geometry}
 
 %% Personal data
 \firstname{Jakub}
@@ -22,7 +22,7 @@
 \email{panswiata@gmail.com}
 \homepage{github.com/PonderingGrower}
 \extrainfo{Born on 01.02.1988}
-\photo[64pt][0.4pt]{me}
+\photo[74pt][0.5pt]{me}
 
 \begin{document}
 \makecvtitle
@@ -30,24 +30,8 @@
 \section{Education}
     \cventry{2007--2013}{Engineer}{Polish-Japanese Institute of Information Technology}{Warsaw}{\textit{Informatics}}{Engineering studies in Computer Networks department with specialization in ``System and Network Programming''}
 
-    \vspace*{4mm}
+    \vspace*{2mm}
     \cventry{2005--2007}{Secondary School}{High School of Joachim Lelewel}{Warsaw}{}{}
-
-\section{Engineering thesis}
-\cvitem{Title}{\textbf{Sharing of character devices over networks in GNU/Linux systems}}
-    \cvitem{Specialization}{System and Network Programming}
-    \cvitem{Description}{A set of software made up of a server and a Linux kernel module that lets processes access a physical device that is connected to a remote machine in a completely transparent way.}
-
-\section{Foreign languages}
-    \cvitemwithcomment{English}{Fluent}{Easy of direct communication and an extensive technical vocabulary.}
-
-\section{Knowledge}
-    \cvitem{Languages}{C, C++, Java, bash, Powershell, SQL, Lua, \LaTeX, HTML, CSS, UML}
-    \cvitem{Systems}{GNU/Linux(all flavours of Debian and Gentoo), Windows, Windows Server 2003 i 2008}
-    \cvitem{Hardware}{Computers and peripherals, DELL workstations and servers, CISCO and DELL switches and routers, APC backup power supplies}
-    \cvitem{Platforms}{Active Directory, Group Policy, Hyper-V, VirtualBox, MSSQL, Mysql, Postgresql, IIS, apache, nginx, lighttpd, Samba, NFS, Cacti, Graylog2}
-    \cvitem{Tools}{Microsoft RSAT, MS Powershell, MS SQL Studio, MS Office Suite, Git, GNU Make, VIM, Gimp, Photoshop}
-    \cvitem{Extra}{Exact Globe ERP software, Sage accounting systems, Accounting and payroll system Płatnik, most of european online banking platforms}
 
 \section{Experience}
 \cventry{2011--2013}{IT Specialist}{Trinity Corporate Services Sp. z o.o.}{Warsaw}{Full time}{Monitoring and maintenance of IT infrastructure as well as resolving all related issues. Execution of IT projects such us: migration of local mail servers to a remote hosting provider, updating of infrastructure in remote offices or deployment of new software in offices.}
@@ -62,15 +46,32 @@
     \cvlistitem{Receiving, registering and resolving all IT related issues}
     \cvlistitem{Providing support to all users and clients}
 
-    \vspace*{4mm}
-    \cventry{2012}{Contract Work}{Empirius Group Sp. z o.o.}{Warsaw}{Ad hoc work}{Creation of whole IT infrastructure for a small company office with around 10 workstations. Selecting hardware and software, installation and configuration as well as installing cabling. Included was installation and configuration of a HP server running Wwindows Server 2008 to facilitate secure sharing of files as well as a printer and a scanner}
+    \vspace*{2mm}
+    \cventry{2012}{Contract Work}{Empirius Group Sp. z o.o.}{Warsaw}{Ad hoc work}{Creation of whole IT infrastructure for a small company office with around 10 workstations. Selecting hardware and software, installation and configuration as well as installing cabling. Included was installation and configuration of a HP server running Windows Server 2008 to facilitate secure sharing of files as well as a printer and a scanner}
 
-    \vspace*{4mm}
+    \vspace*{2mm}
     \cventry{2010}{Intern-Trainee}{BIS Izomar Sp. z o.o.}{Warsaw}{Two month internship}{Internship focusing on providing technical assistance on construction site at power plant ``Żerań''. Responsible for computers and printers. During the second half of internship tasked with developing a VLAN configuration using third layer switches that will improve security and ease of management in the main office.}
     \cvitem{}{Acquired experience:}
     \cvlistitem{Structure of companies and their inner workings - Construction work}
     \cvlistitem{Regulation regarding security of personal, governmental and business data}
     \cvlistitem{Creating IT infrastructure in a small office on construction site ``Żerań''}
+
+
+\section{Engineering thesis}
+\cvitem{Title}{\textbf{Sharing of character devices over networks in GNU/Linux systems}}
+    \cvitem{Specialization}{System and Network Programming}
+    \cvitem{Description}{A set of software made up of a server and a Linux kernel module that lets processes access a physical device that is connected to a remote machine in a completely transparent way.}
+
+\section{Foreign languages}
+    \cvitemwithcomment{English}{Fluent}{Easy of direct communication and an extensive technical vocabulary.}
+
+\section{Knowledge}
+    \cvitem{Languages}{C, C++, Java, bash, Powershell, SQL, Lua, \LaTeX, HTML, CSS, UML}
+    \cvitem{Systems}{GNU/Linux(all flavours of Debian and Gentoo), Windows, Windows Server 2003 i 2008}
+    \cvitem{Hardware}{Computers and peripherals, DELL workstations and servers, CISCO and DELL switches and routers, APC backup power supplies}
+    \cvitem{Platforms}{Active Directory, Group Policy, Hyper-V, VirtualBox, MSSQL, Mysql, Postgresql, IIS, apache, nginx, lighttpd, Samba, NFS, rsync, Cacti, Graylog2}
+    \cvitem{Tools}{Microsoft RSAT, MS Powershell, MS SQL Studio, MS Office Suite, Git, GNU Make, VIM, Gimp, Photoshop}
+    \cvitem{Extra}{Exact Globe ERP software, Sage accounting systems, Accounting and payroll system Płatnik, most of european online banking platforms}
 
 \section{Courses and certificates}
     \cvitem{2011}{PJWSTK Certificate in Business English, level C1}
