--- a/cv_en.tex
+++ b/cv_en.tex
@@ -64,6 +64,7 @@
 
 \section{Foreign languages}
     \cvitemwithcomment{English}{Fluent}{Easy of direct communication and an extensive technical vocabulary.}
+    \cvitemwithcomment{German}{Basic}{Basic understanding acquired in secondary school.}
 
 \section{Knowledge}
     \cvitem{Languages}{C, C++, Java, bash, Powershell, SQL, Lua, \LaTeX, HTML, CSS, UML}
