--- a/cv_pl.tex
+++ b/cv_pl.tex
@@ -63,6 +63,7 @@
 
 \section{Języki obce}
     \cvitemwithcomment{Angielski}{Biegle}{Łatwość w bezpośredniej komunikacji w języku angielskim. Dobra znajomość słownictwa technicznego.}
+    \cvitemwithcomment{Niemiecki}{Podstawy}{Podstawowa znajomość nabyta w liceum.}
 
 \section{Umiejętności}
     \cvitem{Języki}{C, C++, Java, bash, Powershell, SQL, Lua, \LaTeX, HTML, CSS, UML}
