skróciłem komentarz do języka angielskiego

--- a/cv_pl.tex
+++ b/cv_pl.tex
@@ -62,7 +62,7 @@
     \cvitem{Opis}{Zestaw oprogramowania składający się z serwera oraz modułu jądra Linux udostępniający w sposób przezroczysty dla użytkowników urządzenia znakowe na zdalnych maszynach.}
 
 \section{Języki obce}
-    \cvitemwithcomment{Angielski}{Biegle}{Łatwość w bezpośredniej komunikacji w języku angielskim. Dobra znajomość słownictwa technicznego.}
+    \cvitemwithcomment{Angielski}{Biegle}{Łatwość w bezpośredniej komunikacji w języku angielskim i szerokie słownictwo techniczne.}
     \cvitemwithcomment{Niemiecki}{Podstawy}{Podstawowa znajomość nabyta w liceum.}
 
 \section{Umiejętności}
