--- a/cv_en.tex
+++ b/cv_en.tex
@@ -73,7 +73,7 @@
     \cvitem{Extra}{Exact Globe ERP software, Sage accounting systems, Accounting and payroll system Płatnik, most of european online banking platforms}
 
 \section{Courses and certificates}
-    \cvitem{2011}{PJWSTK Certificate in Business English, level C1}
+    \cvitem{2011}{PJWSTK Certificate in Business English, C1 level}
     \cvitem{2009}{Completed CISCO CCNA course}
     \cvitem{2009}{Completed first level of Linux Professional Institute course}
     
