dodałem kod pocztowy doi adresu

--- a/cv_pl.tex
+++ b/cv_pl.tex
@@ -15,7 +15,7 @@
 \firstname{Jakub}
 \familyname{Sokołowski}
 \title{Specjalista IT}
-\address{Warszawa}{Klaudyny 32 m 1}
+\address{Warszawa 01-684}{Klaudyny 32 m 1}
 \mobile{600~858~250}
 \phone{+48~(22)~833~77~50}
 \email{panswiata@gmail.com}
