--- a/cv_en.tex
+++ b/cv_en.tex
@@ -15,7 +15,7 @@
 \firstname{Jakub}
 \familyname{Sokołowski}
 \title{IT Specialist}
-\address{Warsaw}{Klaudyny 32 m 1}
+\address{01-684 Warsaw}{Klaudyny 32 m 1}
 \mobile{600~858~250}
 \phone{+48~(22)~833~77~50}
 \email{panswiata@gmail.com}
@@ -68,7 +68,7 @@
     \cvitem{Languages}{C, C++, Java, bash, Powershell, SQL, Lua, \LaTeX, HTML, CSS, UML}
     \cvitem{Systems}{GNU/Linux(all flavours of Debian and Gentoo), Windows, Windows Server 2003 i 2008}
     \cvitem{Hardware}{Computers and peripherals, DELL workstations and servers, CISCO and DELL switches and routers, APC backup power supplies}
-    \cvitem{Platforms}{Active Directory, Group Policy, Hyper-V, VirtualBox, MSSQL, Mysql, Postgresql, IIS, apache, nginx, lighttpd, Samba, NFS, rsync, Cacti, Graylog2}
+    \cvitem{Platforms}{Active Directory, Group Policy, Hyper-V, VirtualBox, MSSQL, Mysql, Postgresql, IIS, apache, nginx, lighttpd, Samba, NFS, rsync, Cacti, Graylog2, iptables, iproute2}
     \cvitem{Tools}{Microsoft RSAT, MS Powershell, MS SQL Studio, MS Office Suite, Git, GNU Make, VIM, Gimp, Photoshop}
     \cvitem{Extra}{Exact Globe ERP software, Sage accounting systems, Accounting and payroll system Płatnik, most of european online banking platforms}
 
