zmniejszyłem zgodę na rpzetwarzanie danych

--- a/cv_en.tex
+++ b/cv_en.tex
@@ -80,5 +80,5 @@
 \section{Interests}
     \cvitem{}{Informatics, economics, history, sociology, philosophy, futurology, astronomy, molecular biology}
 
-\lfoot{Wyrażam zgodę na przetwarzanie moich danych osobowych zawartych w ofercie przy realizacji procesów rekrutacji i selekcji zgodnie z przepisami ustawy z 29.08.1997 r. o ochronie danych osobowych (Dz. U. z 2002r. Nr 101, poz. 926).}
+\lfoot{\scriptsize{Wyrażam zgodę na przetwarzanie moich danych osobowych zawartych w złożonych przeze mnie dokumentach, w tym na przetwarzanie ich w przyszłości - dla celów związanych z procesem rekrutacji. Niniejszą zgodę składam dobrowolnie i oświadczam, że zostałem poinformowany o uprawnieniach przysługujących mi na podstawie ustawy z dnia 29 sierpnia 1997 r. o ochronie danych osobowych (tekst jednolity: Dz.U. z 2002 r . Nr. 101., poz. 926. ze zmianami).}}
 \end{document}
