--- a/cv_pl.tex
+++ b/cv_pl.tex
@@ -80,5 +80,5 @@
 \section{Zainteresowania}
     \cvitem{}{Informatyka, ekonomia, historia, socjologia, filozofia, futurologia, astronomia, biologia molekularna}
 
-\lfoot{\scriptsize{Wyrażam zgodę na przetwarzanie moich danych osobowych zawartych w złożonych przeze mnie dokumentach, w tym na przetwarzanie ich w przyszłości - dla celów związanych z procesem rekrutacji. Niniejszą zgodę składam dobrowolnie i oświadczam, że zostałem poinformowany o uprawnieniach przysługujących mi na podstawie ustawy z dnia 29 sierpnia 1997 r. o ochronie danych osobowych (tekst jednolity: Dz.U. z 2002 r . Nr. 101., poz. 926. ze zmianami).}}
+\lfoot{\scriptsize{Wyrażam zgodę na przetwarzanie moich danych osobowych zawartych w mojej ofercie pracy dla potrzeb niezbędnych do realizacji procesu rekrutacji zgodnie z Ustawą z dnia 29.08.1997 roku o Ochronie Danych Osobowych; tekst jednolity: Dz. U. z 2002r. Nr 101, poz. 926 ze zm.}}
 \end{document}
