--- a/cv_en.tex
+++ b/cv_en.tex
@@ -33,7 +33,7 @@
     \cventry{2005--2007}{Secondary School}{High School of Joachim Lelewel}{Warsaw}{}{}
 
 \section{Experience}
-\cventry{2011--2013}{IT Specialist}{Trinity Corporate Services Sp. z o.o.}{Warsaw}{Full time}{Monitoring and maintenance of IT infrastructure as well as resolving all related issues. Execution of IT projects such us: migration of local mail servers to a remote hosting provider, updating of infrastructure in remote offices or deployment of new software in offices.}
+\cventry{2011--2013}{IT Specialist}{Trinity Corporate Services Sp. z o.o.}{Warsaw}{Full time}{Monitoring and maintenance of IT infrastructure as well as resolving all related issues. Execution of IT projects such as: migration of local mail servers to a remote hosting provider, updating of infrastructure in remote offices or deployment of new software in offices.}
     \cvitem{}{Responsible for:}
     \cvlistitem{Windows 2003 and 2008 as well as Linux(Ubuntu Server) servers}
     \cvlistitem{Performance monitoring of IT infrastructure(Cacti, Graylog2)}
