--- a/cv_en.tex
+++ b/cv_en.tex
@@ -69,7 +69,7 @@
     \cvitem{Systems}{GNU/Linux(all flavours of Debian and Gentoo), Windows, Windows Server 2003 i 2008}
     \cvitem{Hardware}{Computers and peripherals, DELL workstations and servers, CISCO and DELL switches and routers, APC backup power supplies}
     \cvitem{Networks}{Static and dynamic routing with RIP and OSPF, DHCP, DNS, NAT, QoS, WLAN, all layers of OSI model}
-    \cvitem{Platforms}{Active Directory, Group Policy, Hyper-V, VirtualBox, MSSQL, Mysql, Postgresql, IIS, apache, nginx, lighttpd, Samba, NFS, rsync, Cacti, Graylog2, iptables, iproute2}
+    \cvitem{Platforms}{Active Directory, Group Policy, Hyper-V, VirtualBox, MSSQL, Mysql, Postgresql, IIS, apache, nginx, lighttpd, Samba, NFS, rsync, Cacti, Graylog2, iptables, iproute2, bind, postfix}
     \cvitem{Tools}{Microsoft RSAT, MS Powershell, MS SQL Studio, MS Office Suite, Git, GNU Make, VIM, Gimp, Photoshop}
     \cvitem{Extra}{Exact Globe ERP software, Sage accounting systems, Accounting and payroll system Płatnik, most of european online banking platforms}
 
