--- a/cv_en.tex
+++ b/cv_en.tex
@@ -61,7 +61,7 @@
     \cvitem{Description}{A set of software made up of a server and a Linux kernel module that lets processes access a physical device that is connected to a remote machine in a completely transparent way.}
 
 \section{Foreign languages}
-    \cvitemwithcomment{English}{Fluent}{Easy of direct communication and an extensive technical vocabulary.}
+    \cvitemwithcomment{English}{Fluent}{Ease of direct communication and an extensive technical vocabulary.}
     \cvitemwithcomment{German}{Basic}{Basic understanding acquired in secondary school.}
 
 \section{Knowledge}
